force-app/main/default/objects/DM_Bill__c/DM_Bill__c.object-meta.xml
<CustomObject>
    <label>DM Bill</label>
    <nameField>
        <label>DM Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>