force-app/main/default/objects/DM_Bill__c/fields/DM_DD_Primary_Flag__c.field-meta.xml
<CustomField>
    <fullName>DM_DD_Primary_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Primary</label>
    <type>Checkbox</type>
</CustomField>