force-app/main/default/objects/DM_Bill__c/fields/DM_Due_Amt__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Amount</description>
    <label>DM Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>