force-app/main/default/objects/DM_Bill__c/fields/DM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Date__c</fullName>
    <description>Due date of the due.</description>
    <inlineHelpText>Due Date of the Due</inlineHelpText>
    <label>DM Due Date</label>
    <type>Date</type>
</CustomField>