force-app/main/default/objects/DM_Bill__c/fields/DM_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Type__c</fullName>
    <description>Due Type Id</description>
    <label>DM Due Type Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>