force-app/main/default/objects/DM_Bill__c/fields/DM_Due_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Type_Description__c</fullName>
    <description>Description of Due, to be shown on UI</description>
    <label>DM Due Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>