force-app/main/default/objects/DM_Bill__c/fields/DM_Interest_Billed__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Billed__c</fullName>
    <label>DM Billed Interest (=)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>