force-app/main/default/objects/DM_Bill__c/fields/DM_Master_Archive_Object__c.field-meta.xml
<CustomField>
    <fullName>DM_Master_Archive_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
    <label>DM Master Archive Object</label>
    <type>Checkbox</type>
</CustomField>