force-app/main/default/objects/DM_Bill__c/fields/DM_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Date__c</fullName>
    <description>Payment Date.</description>
    <label>DM Payment Date</label>
    <type>Date</type>
</CustomField>