force-app/main/default/objects/DM_Bill__c/fields/DM_Payment_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Payment Satisfied</label>
    <type>Checkbox</type>
</CustomField>