force-app/main/default/objects/DM_Bill__c/fields/DM_Principal_Billed__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Billed__c</fullName>
    <description>Billed Principal Amount.</description>
    <label>DM Billed Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>