force-app/main/default/objects/DM_Bill__c/fields/DM_Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Paid__c</fullName>
    <label>DM Paid Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>