force-app/main/default/objects/DM_Bill__c/fields/DM_Summary__c.field-meta.xml
<CustomField>
    <fullName>DM_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
    <label>DM Summary</label>
    <type>Checkbox</type>
</CustomField>