force-app/main/default/objects/DM_Bill__c/fields/DM_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Date__c</fullName>
    <description>Transaction date</description>
    <inlineHelpText>Date on which the transaction got created.</inlineHelpText>
    <label>DM Transaction Date</label>
    <type>Date</type>
</CustomField>